--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^2.0.10+1
   talker_logger: ^4.1.3
+  firebase_auth: ^4.19.2
+  otp_text_field: ^1.1.3
+  firebase_core: ^2.30.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/png/
+    # - assets/images/png/
     - assets/images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
