--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   otp_text_field: ^1.1.3
   firebase_auth: ^4.17.8
   firebase_core: ^2.27.0
+  firebase_core_web: ^2.11.5
+  firebase_auth_web: ^5.9.8
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    # - assets/images/png/
+    - assets/images/png/
     - assets/images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
