--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   get: ^4.6.6
   geolocator: ^11.0.0
   get_storage: ^2.1.1
-  intl: ^0.17.0
+
+  image_picker: ^1.1.0
   flutter_svg: ^2.0.10+1
   talker_logger: ^4.1.3
   otp_text_field: ^1.1.3
@@ -49,7 +50,14 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   stylish_bottom_bar: ^1.1.0
   flutter_map: ^6.1.0
+  intl: ^0.19.0
   location: ^6.0.1
+  flutter_map_dragmarker: ^6.0.0
+  uuid: ^4.4.0
+  latlong2: ^0.9.1
+  isar: ^3.1.0+1
+  firebase_storage: ^11.7.4
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +69,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.9
+  isar_flutter_libs:
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
