--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   stylish_bottom_bar: ^1.1.0
 
+  flutter_carousel_slider: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
